# voxlap

./: .gitignore  CMakeLists.txt  COPYING  README.md
cmake/: toolchain-i686-pc-linux.cmake
doc/: cave.txt  voxedhlp.txt
res/kv6/: bishop.kv6  king.kv6  knight.kv6  pawn.kv6  queen.kv6  rook.kv6
res/tx/: basic.tx  bloodrazor.tx  bloodyvel.tx  bluemag.tx  colorplasm.tx  colorplasm2.tx  default.tx  greenmag.tx  greenmar.tx  greenplasm.tx  hardgrey.tx  orangestel.tx  orangestel2.tx  orangevel.tx  redmar.tx  rockland.tx  rotapple.tx
src/: CMakeLists.txt  game.c  kplib.c  kwalk.c  sdl3main.c  sysmain.h  v5.asm  voxed.c  voxlap5.c  voxlap5.h  winmain.cpp
src/genland/: CMakeLists.txt  genland.cpp
src/groudraw/: colook.h  g.asm  g6.asm  grou6d.c  groucom.c  groucube.c  groudraw.c  kplib.c  makefile  og.asm  overgrou.c  pragmas.h  steep.c  steep2.c  stp.asm  stp2.asm  ves2.h  xmm.inc
src/justfly/: justfly.c  key.h
src/kbarf/: kbarf.c
src/kv62stl/: CMakeLists.txt  kv62stl.c
src/slab6/: CMakeLists.txt  s6.asm  slab6.c  slab6.cpp
src/v3b2vox/: v3b2vox.c  vox2v3a.c
