project(slab6)

add_executable(slab6 WIN32 slab6.c s6.asm)
set_source_files_properties(slab6.c PROPERTIES LANGUAGE CXX)
if(WIN32 OR MSVC OR CMAKE_SYSTEM_NAME STREQUAL "Windows")
	target_sources(slab6 PRIVATE slab6.rc)
	target_link_libraries(slab6 PRIVATE winmain)
	target_link_directories(slab6 PUBLIC ${CMAKE_SOURCE_DIR}/ext/dx8/lib/)
	target_link_libraries(slab6 PUBLIC ddraw dinput dxguid)
	# warning C4838: conversion from 'int' to 'char' requires a narrowing conversion
	target_compile_options(slab6 PRIVATE /wd4838)
elseif(SDL3_FOUND)
	target_link_libraries(slab6 PRIVATE sdl3main)
else()
	message(FATAL_ERROR "no sysmain backend available")
endif()
set_target_properties(slab6 PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
target_link_libraries(slab6 PRIVATE $<$<BOOL:${VOXLAP_USE_ASAN}>:ASAN::ASAN>)
